# MusicManiac

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.458c47c  CMakeLists.txt.user.88ba758  CustomSortFilterProxyModel.cpp  CustomSortFilterProxyModel.hpp  FLACFile.cpp  FLACFile.hpp  MP3File.cpp  MP3File.hpp  MainWindow.cpp  MainWindow.hpp  MusicDebugger.cpp  MusicDebugger.hpp  MusicFile.cpp  MusicFile.hpp  MusicFileFactory.cpp  MusicFileFactory.hpp  MusicFolderModel.cpp  MusicFolderModel.hpp  NonCopyable.hpp  PlaylistGenerator.cpp  PlaylistGenerator.hpp  QCustomSortFilterProxyModel.cpp  QCustomSortFilterProxyModel.hpp  README.md  Utility.hpp  Uuid.hpp  configure_debug.sh  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  musicman.pro  readme.txt  swift_sync.sh  sync.sh  watchmusic.sh  (+2 more)
bucketmaniac/: bucketbot.py  bucketmaniac.py  requirements.txt  test.py
scripts/: configure_release.sh  installdeps.sh  swift_sync.sh  x5_sync.sh
src/: CustomSortFilterProxyModel.cpp  CustomSortFilterProxyModel.hpp  FLACFile.cpp  FLACFile.hpp  MP3File.cpp  MP3File.hpp  MainWindow.cpp  MainWindow.hpp  MusicDebugger.cpp  MusicDebugger.hpp  MusicFile.cpp  MusicFile.hpp  MusicFileFactory.cpp  MusicFileFactory.hpp  MusicFolderModel.cpp  MusicFolderModel.hpp  MusicFolderWatcher.cpp  MusicFolderWatcher.hpp  Playlist.cpp  Playlist.hpp  PlaylistGenerator.cpp  PlaylistModel.cpp  PlaylistModel.hpp  Uuid.cpp  images.qrc  main.cpp  mainwindow.ui
src/buffer/: CustomSortFilterProxyModel.cpp  MusicFolderModel.cpp
src/cmd/: YoutubeFetcher.cpp  YoutubeFetcher.hpp  cmd.cpp
src/db/: MusicDb.cpp  MusicDb.hpp
src/fs/: MusicFileSystem.cpp  MusicFileSystem.hpp  wrap.cpp  wrap.hpp
src/gui/: CustomSortFilterProxyModel.cpp  CustomSortFilterProxyModel.hpp  MainWindow.cpp  MainWindow.hpp  MusicFolderModel.cpp  PlaylistModel.cpp  gui.cpp  mainwindow.ui
src/lib/: Collection.cpp  Collection.hpp  Debugger.cpp  Debugger.hpp  FLACFile.cpp  FLACFile.hpp  MP3File.cpp  MP3File.hpp  MusicFile.cpp  MusicFile.hpp  MusicFileFactory.cpp  MusicFileFactory.hpp  Playlist.cpp  Playlist.hpp  Uuid.cpp  Uuid.hpp
src/musicfs/: MusicFileSystem.cpp  MusicFileSystem.hpp  musicfs.cpp  wrap.cpp  wrap.hpp
src/musicmaniac/: AlbumModel.cpp  AlbumModel.hpp  AlbumsModel.cpp  AlbumsModel.hpp  ArtistModel.cpp  ArtistModel.hpp  CollectionModel.cpp  CollectionModel.hpp  DragAndDropMusic.cpp  DragAndDropMusic.hpp  HorizontalProxyModel.cpp  HorizontalProxyModel.hpp  MainWindow.cpp  MainWindow.hpp  MusicFolderModel.hpp  MusicModel.cpp  MusicModel.hpp  PlaylistModel.cpp  PlaylistModel.hpp  PlaylistViewStyle.hpp  PlaylistsModel.cpp  PlaylistsModel.hpp  mainwindow.ui  musicmaniac.cpp
test/: test.cpp
web/: dev.py  musicmaniac.py  requirements.txt
